# musl

./: .gitignore  CMakeLists.txt  README.md
arch/generic/bits/: syscall.h
arch/x86_64/: fma.c  fmaf.c
src/internal/: version.c
src/unistd/: readv.c  writev.c
